fixing z-index issues

--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -1,15 +1,14 @@
-.card-footer{
-    padding: 0;
-    margin-bottom: 30px;
-}
 .btn{
     width: 290px;
+    top: 180px
 }
 .list-group{
     top: 90px;
+    z-index: auto;
 }
 .card{
-    margin-top: 90px;
+   top: 90px;
+   margin-bottom: 20px;
 }
 .noProduct{
     margin: 200px 100px;
